# saccade

./: .gitignore  Cargo.toml  LICENSE  README.md  saccade  saccade.sh
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  detection.rs  enumerate.rs  error.rs  filter.rs  guide.rs  heuristics.rs  lib.rs  manifest.rs  parser.rs  request.rs  stage0.rs  stage1.rs  stage2.rs
docs/: dynamic-dependancy-detection.md
docs/research/: Comparative Analysis of AI-Generated Research on Content-Based Detection of Software Dependency Manifests.md  natures-evolutionary-rnd-blueprint-for-resilient-engineering.md
gauntlet/: Cargo.toml
gauntlet/src/: main.rs
test-01-bug-hunt/: Cargo.toml
test-01-bug-hunt/src/: api.rs  main.rs
test-02-new-feature/: Cargo.toml
test-02-new-feature/src/: plugin.rs  plugins.rs
test-02-new-feature/src/plugins/: hello_plugin.rs
test-03-security-audit/: Cargo.toml
tests/: gauntlet.sh
tests/test-01-bug-hunt/src/: utils.rs
tests/test-02-new-feature/src/: main.rs
tests/test-02-new-feature/src/plugins/: echo_plugin.rs
tests/test-03-security-audit/src/: main.rs
