[workspace]
members = ["core", "cli", "gauntlet"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/saccade"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
walkdir = "2"
tempfile = "3"
chrono = "0.4"