[package]
name = "saccade-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
ignore.workspace = true
walkdir.workspace = true
chrono.workspace = true